--- a/notebook/trail.ipynb
+++ b/notebook/trail.ipynb
@@ -1751,8 +1751,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "67795d4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from string import punctuation "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "0b013ebc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~–'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "punctuation+'–'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "56d3b73e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True: –, type: <class 'str'>\n",
+      "True: -, type: <class 'str'>\n",
+      "False: '–' == '-'\n"
+     ]
+    }
+   ],
+   "source": [
+    "if '–' in punctuation+'–':\n",
+    "    print(f\"True: –, type: {type('–')}\")\n",
+    "if '-' in punctuation+'-':\n",
+    "    print(f\"True: -, type: {type('-')}\") \n",
+    "print(f\"{'–' == '-'}: \\'–\\' == \\'-\\'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05649323",
    "metadata": {},
    "outputs": [],
    "source": []
