parsing process modified for scalability

--- a/notebook/trail.ipynb
+++ b/notebook/trail.ipynb
@@ -2060,8 +2060,438 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "16d4760b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bd5a1ede",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "person = Person()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b222182b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Person'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "person.__class__.__name__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6db8b50b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class foo():\n",
+    "    def __init__(self, kind=None):\n",
+    "        self.kind = kind\n",
+    "\n",
+    "    def __call__(self, kind=None):\n",
+    "        return foo(kind=kind)\n",
+    "\n",
+    "    def my_print(self):\n",
+    "        print (self.kind)\n",
+    "\n",
+    "    def line(self):\n",
+    "        return self(kind='line')\n",
+    "    def bar(self):\n",
+    "        return self(kind='bar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59cfd638",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = foo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "7bc79983",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.foo object at 0x7bb771ee7350>\n",
+      "<__main__.foo object at 0x7bb771ee7350>\n",
+      "<__main__.foo object at 0x7bb7715c9d50>\n",
+      "<__main__.foo object at 0x7bb7715ca250>\n",
+      "<__main__.foo object at 0x7bb7715f4410>\n",
+      "None\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.bar())\n",
+    "print(a.line())\n",
+    "print(a.bar())\n",
+    "print(a.bar())\n",
+    "print(a.line())\n",
+    "print(a.my_print())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c79b952",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "line\n"
+     ]
+    }
+   ],
+   "source": [
+    "a.bar().line().bar().bar().line().my_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "dea87d64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cac39817",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B  C\n",
+       "0  1  2  3\n",
+       "1  4  5  6"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame([[1, 2, 3],\n",
+    "                   [4, 5, 6]], \n",
+    "                   columns=[\"A\", \"B\", \"C\"])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0bce746f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'   A  B  C\\n0  1  2  3\\n1  4  5  6'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "826683a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"['A', 'B', 'C']\""
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(df.columns.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "991e4219",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8ba99ee8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[[1, 2, 3], [4, 5, 6]]'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(df.values.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "89f2f852",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "56249a05",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('path/to/basic/folder')"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = Path(\"path/to/basic/folder\")\n",
+    "path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c30a5a29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('path/to/basic/folder/file.ext')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path / \"file.ext\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "078b08cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from enum import Enum\n",
+    "from pydantic import BaseModel, ConfigDict\n",
+    "\n",
+    "class DataIngestionConstants(BaseModel):\n",
+    "    model_config = ConfigDict(\n",
+    "        frozen=True,\n",
+    "        extra=\"forbid\",\n",
+    "        use_enum_values=True  # Serialize enum values\n",
+    "    )\n",
+    "    \n",
+    "    class Paths(str, Enum):\n",
+    "        ROOT_DIR_NAME = \"artifacts\"\n",
+    "        DATA_ROOT_DIR_NAME = \"data_ingestion\"\n",
+    "        INGESTION_ROOT_DIR_NAME = \"ingestion\"  \n",
+    "        RAW_DATA_DIR_NAME = \"raw\"\n",
+    "        PARSED_DATA_DIR_NAME = \"parsed\"\n",
+    "    \n",
+    "    ROOT_DIR_NAME: Paths = Paths.ROOT_DIR_NAME.value\n",
+    "    DATA_ROOT_DIR_NAME: Paths = Paths.DATA_ROOT_DIR_NAME.value\n",
+    "    INGESTION_ROOT_DIR_NAME: Paths = Paths.INGESTION_ROOT_DIR_NAME.value\n",
+    "    RAW_DATA_DIR_NAME: Paths = Paths.RAW_DATA_DIR_NAME.value\n",
+    "    PARSED_DATA_DIR_NAME: Paths = Paths.PARSED_DATA_DIR_NAME.value\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "c2032ab6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "constants = DataIngestionConstants()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "daf18a17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "artifacts\n",
+      "data_ingestion\n",
+      "ingestion\n",
+      "raw\n",
+      "parsed\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(constants.ROOT_DIR_NAME)\n",
+    "print(constants.DATA_ROOT_DIR_NAME)\n",
+    "print(constants.INGESTION_ROOT_DIR_NAME)\n",
+    "print(constants.RAW_DATA_DIR_NAME)\n",
+    "print(constants.PARSED_DATA_DIR_NAME)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "27586b9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(constants.ROOT_DIR_NAME))\n",
+    "print(type(constants.DATA_ROOT_DIR_NAME))\n",
+    "print(type(constants.INGESTION_ROOT_DIR_NAME))\n",
+    "print(type(constants.RAW_DATA_DIR_NAME))\n",
+    "print(type(constants.PARSED_DATA_DIR_NAME))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5204d05b",
    "metadata": {},
    "outputs": [],
    "source": []
