--- a/notebook/data_ingestion.ipynb
+++ b/notebook/data_ingestion.ipynb
@@ -79,12 +79,14 @@
     }
    },
    "source": [
+    "ROOT_DIR: artifacts \n",
+    "\n",
     "DATA: \n",
     "    ROOT_DIR: data \n",
     "    INGESTION: \n",
     "        ROOT_DIR: ingestion \n",
-    "        RAW_DATA_DIR: raw \n",
-    "        PARSED_DATA_DIR: parsed \n",
+    "        RAW_DATA_DIR: feature_store \n",
+    "        PARSED_DATA_DIR: ingested \n",
     "        FINAL_DATA_DIR: final"
    ]
   },
@@ -743,7 +745,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Resume ATS Score Checker",
+   "display_name": "resume-ats-score-checker",
    "language": "python",
    "name": "python3"
   },
@@ -757,7 +759,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
