.env.example and readme added

--- a/notebook/trail.ipynb
+++ b/notebook/trail.ipynb
@@ -9366,8 +9366,323 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "912610e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "49e4c66e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/hasan/Artificial-Intelligence/projects/Resume-ATS-Score-Checker/notebook'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7852992e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"..\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "7b4d8873",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/hasan/Artificial-Intelligence/projects/Resume-ATS-Score-Checker'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dd8738b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['3_js_heavy.html',\n",
+       " '2.pdf',\n",
+       " '1.pdf',\n",
+       " '1.docx',\n",
+       " '2.docx',\n",
+       " '3_images.pdf',\n",
+       " '2.html',\n",
+       " '3.docx',\n",
+       " '3_images.docx',\n",
+       " '3.html',\n",
+       " '3.pdf',\n",
+       " '1.html']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "files_list = os.listdir(\"resumes/\")\n",
+    "files_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fc6928af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3_js_heavy.html having 2721 binary charachters\n",
+      "2.pdf having 181203 binary charachters\n",
+      "1.pdf having 164017 binary charachters\n",
+      "1.docx having 15302 binary charachters\n",
+      "2.docx having 16332 binary charachters\n",
+      "3_images.pdf having 357705 binary charachters\n",
+      "2.html having 5627 binary charachters\n",
+      "3.docx having 19189 binary charachters\n",
+      "3_images.docx having 1805093 binary charachters\n",
+      "3.html having 10214 binary charachters\n",
+      "3.pdf having 214617 binary charachters\n",
+      "1.html having 3208 binary charachters\n"
+     ]
+    }
+   ],
+   "source": [
+    "files = []\n",
+    "for path in files_list:\n",
+    "    file = open(f\"resumes/{path}\", \"rb\")\n",
+    "    print(f\"{path} having {len(file.read())} binary charachters\")\n",
+    "    files.append(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8e5a55d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<_io.BufferedReader name='resumes/3_js_heavy.html'>,\n",
+       " <_io.BufferedReader name='resumes/2.pdf'>,\n",
+       " <_io.BufferedReader name='resumes/1.pdf'>,\n",
+       " <_io.BufferedReader name='resumes/1.docx'>,\n",
+       " <_io.BufferedReader name='resumes/2.docx'>,\n",
+       " <_io.BufferedReader name='resumes/3_images.pdf'>,\n",
+       " <_io.BufferedReader name='resumes/2.html'>,\n",
+       " <_io.BufferedReader name='resumes/3.docx'>,\n",
+       " <_io.BufferedReader name='resumes/3_images.docx'>,\n",
+       " <_io.BufferedReader name='resumes/3.html'>,\n",
+       " <_io.BufferedReader name='resumes/3.pdf'>,\n",
+       " <_io.BufferedReader name='resumes/1.html'>]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "f9b0c3eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b''\n",
+      "b''\n",
+      "b''\n",
+      "b''\n",
+      "b''\n",
+      "b''\n",
+      "b''\n",
+      "b''\n",
+      "b''\n",
+      "b''\n",
+      "b''\n",
+      "b''\n"
+     ]
+    }
+   ],
+   "source": [
+    "for file in files:\n",
+    "    print(file.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "f32df682",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for file in files:\n",
+    "    file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "c86ae079",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "read of closed file",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[33]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m files:\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[43mfile\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[31mValueError\u001b[39m: read of closed file"
+     ]
+    }
+   ],
+   "source": [
+    "for file in files:\n",
+    "    print(file.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b6991df2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastapi import UploadFile\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "edec24a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'test.py'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path = Path(\"test.py\")\n",
+    "path.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b44e6576",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/hasan/Artificial-Intelligence/projects/Resume-ATS-Score-Checker'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5eb2c998",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[UploadFile(filename='3_js_heavy.html', size=2721, headers=Headers({})),\n",
+       " UploadFile(filename='2.pdf', size=181203, headers=Headers({})),\n",
+       " UploadFile(filename='1.pdf', size=164017, headers=Headers({})),\n",
+       " UploadFile(filename='1.docx', size=15302, headers=Headers({})),\n",
+       " UploadFile(filename='2.docx', size=16332, headers=Headers({})),\n",
+       " UploadFile(filename='3_images.pdf', size=357705, headers=Headers({})),\n",
+       " UploadFile(filename='2.html', size=5627, headers=Headers({})),\n",
+       " UploadFile(filename='3.docx', size=19189, headers=Headers({})),\n",
+       " UploadFile(filename='3_images.docx', size=1805093, headers=Headers({})),\n",
+       " UploadFile(filename='3.html', size=10214, headers=Headers({})),\n",
+       " UploadFile(filename='3.pdf', size=214617, headers=Headers({})),\n",
+       " UploadFile(filename='1.html', size=3208, headers=Headers({}))]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "files = []\n",
+    "for name in files_list:\n",
+    "    path = Path(f\"resumes/{name}\")\n",
+    "    file = open(path, \"rb\")\n",
+    "    files.append(UploadFile(file, size=path.stat().st_size, filename=path.name))\n",
+    "files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f4e5626",
    "metadata": {},
    "outputs": [],
    "source": []
