--- a/notebook/trail.ipynb
+++ b/notebook/trail.ipynb
@@ -10086,8 +10086,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "e8f69764",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "cdeab78d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/hasan/Artificial-Intelligence/projects/Resume-ATS-Score-Checker/notebook'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "eed7221b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"..\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7e2f6140",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/hasan/Artificial-Intelligence/projects/Resume-ATS-Score-Checker'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "a1b49543",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.ats.cloud import GCPFolderManager\n",
+    "\n",
+    "folder_manager = GCPFolderManager()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d998d51b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "await folder_manager.upload(\"mybucket-test009\", \"artifacts\", \"artifacts\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28f71bfd",
    "metadata": {},
    "outputs": [],
    "source": []
